# pac-man-project

./: .gitignore  CMakeLists.txt  main.cpp  吃豆人课设分工规划.md
assets/maps/: map1.txt  map2.txt
docs/: 架构设计与调用流程.md  项目文件分析.md
src/: GameObject.h  Ghost.cpp  main.cpp
src/core/: Config.h  GameEngine.cpp  GameEngine.h  GameObject.cpp  GameObject.h  InputHandler.cpp  InputHandler.h  Types.h
src/entities/: Blinky.cpp  Blinky.h  Character.cpp  Character.h  Clyde.cpp  Clyde.h  GameObject.h  Ghost.cpp  Ghost.h  Inky.cpp  Inky.h  Pacman.cpp  Pinky.cpp  Pinky.h
src/items/: Dot.cpp  Dot.h  Fruit.cpp  Fruit.h  Item.cpp  Item.h  PowerPellet.cpp  PowerPellet.h
src/managers/: ScoreManager.cpp  ScoreManager.h  SoundManager.cpp  SoundManager.h
src/map/: MapManager.cpp  MapManager.h  Wall.cpp  Wall.h
src/states/: GameOverState.cpp  GameOverState.h  GameState.cpp  GameState.h  MenuState.cpp  MenuState.h  PausedState.cpp  PausedState.h  PlayingState.cpp  PlayingState.h
src/ui/: UIManager.cpp  UIManager.h
